@@ -29,7 +29,6 @@ HEADERS += DatePlot.h
 HEADERS += ScalePlot.h
 HEADERS += IndicatorPlot.h
 HEADERS += BuyArrow.h
-HEADERS += Cycle.h
 HEADERS += FiboLine.h
 HEADERS += HorizontalLine.h
 HEADERS += SellArrow.h
@@ -65,7 +64,6 @@ SOURCES += DatePlot.cpp
 SOURCES += ScalePlot.cpp
 SOURCES += IndicatorPlot.cpp
 SOURCES += BuyArrow.cpp
-SOURCES += Cycle.cpp
 SOURCES += FiboLine.cpp
 SOURCES += HorizontalLine.cpp
 SOURCES += SellArrow.cpp
